--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         }
     ],
     "require": {
-    	"twig/twig":"~1.x"
+    	"twig/twig":"~1.0"
     },
     "autoload": {
         "psr-4": {
