--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,10 @@
         "psr-4": {
 		    "Simplified\\TwigBridge\\":"src/"
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
     }
 }
