--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.0-dev"
+            "dev-master": "1.1-dev"
         }
-    }
+    },
+    "minimum-stability": "dev"
 }
