--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "simplified/twigbridge",
     "description": "Simplified twigbridge module",
     "license":"MIT",
+    "version": "1.0.0",
     "authors": [
         {
             "name": "Andreas Bratfisch",
