--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         }
     ],
     "require": {
-    	"twig/twig":"~1.0"
+    	"twig/twig":"~1.0",
+        "simplified/view":"1.0.*"
     },
     "autoload": {
         "psr-4": {
