added twig extensions

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     ],
     "require": {
     	"twig/twig":"~1.0",
+        "twig/extensions":"1.3.*",
         "simplified/view":"1.0.*"
     },
     "autoload": {
